k8s/shortest_path/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: shortest-path
  name: shortest-path
  namespace: shortest-path
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: shortest-path
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: shortest-path
    spec:
      containers:
      - image: vanfarock/shortest_path:v1.0.0
        imagePullPolicy: IfNotPresent
        name: shortest-path-82dtx
        resources:
          limits:
            cpu: 0.1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        ports:
          - containerPort: 3333
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
