k8s/shortest_path/service.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: v1
kind: Service
metadata:
  labels:
    app: shortest-path
  name: shortest-path
  namespace: shortest-path
spec:
  selector:
    app: shortest-path
  ports:
  - port: 3333
